# Escalonador_de_SO

./: .gitignore  CMakeLists.txt  ExtraInfo.cpp  ExtraInfo.h  FIFO.h  GanttChartGenerator.cpp  GanttChartGenerator.h  IO_Handler.cpp  IO_Handler.h  IO_Operation.cpp  IO_Operation.h  Menu.cpp  Menu.h  Mutex.cpp  Mutex.h  MutexAction.cpp  MutexAction.h  MutexHandler.cpp  MutexHandler.h  PreemptivePriority.h  README.md  SRTF.h  Scheduler.cpp  Scheduler.h  Simulator.cpp  Simulator.h  TCB.cpp  TCB.h  main.cpp  main.h
assets/: configuration example.txt  configuration.txt
diagram/: ClassDiagram.mdj
